--- a/project-doppel.csproj
+++ b/project-doppel.csproj
@@ -42,4 +42,10 @@
   <ItemGroup>
     <Folder Include="scenes\" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Content Include="Docs\Actors.puml" />
+    <Content Include="Docs\General.md" />
+    <Content Include="Docs\Server\Server Overview.puml" />
+  </ItemGroup>
 </Project>
